crates/cli/src/tui/snapshots/ryuzi_cli__tui__render__tests__dashboard_tab_0.snap
---
source: crates/cli/src/tui/render.rs
expression: text
---

 r ryuzi
 1 Status  2 Daemon  3 Sessions  4 Config

 ╭SERVICES────────────────────────────────────────────────────────────────────╮
 │ Daemon   ○ stopped    Discord  ○ —                                         │
 ╰────────────────────────────────────────────────────────────────────────────╯
 ╭SESSIONS────────────────────────────────────────────────────────────────────╮
 │ 0 active / 0 total                                                         │
 ╰────────────────────────────────────────────────────────────────────────────╯
 ╭ENVIRONMENT─────────────────────────────────────────────────────────────────╮
 │ git ✓                                                                      │
 ╰────────────────────────────────────────────────────────────────────────────╯
 ╭ACTION NEEDED───────────────────────────────────────────────────────────────╮
 │ ⚠ missing settings: workdir_root, discord.token, discord.app_id,           │
 │ discord.guild_id — open Config (4)                                         │
 ╰────────────────────────────────────────────────────────────────────────────╯





 Tab switch  ·  ? options  ·  q quit
