crates/cli/src/tui/snapshots/ryuzi_cli__tui__render__tests__dashboard_tab_1.snap
---
source: crates/cli/src/tui/render.rs
expression: text
---

 r ryuzi
 1 Status  2 Daemon  3 Sessions  4 Config

 ╭DAEMON──────────────────────────────────────────────────────────────────────╮
 │ ○ stopped    uptime —                                                      │
 ╰────────────────────────────────────────────────────────────────────────────╯
 ╭LOGS────────────────────────────────────────────────────────────────────────╮
 │ (none)                                                                     │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 ╰────────────────────────────────────────────────────────────────────────────╯
 Tab switch  ·  s start  ·  ? options  ·  q quit
