crates/cli/src/tui/snapshots/ryuzi_cli__tui__render__tests__dashboard_tab_2.snap
---
source: crates/cli/src/tui/render.rs
expression: text
---

 r ryuzi
 1 Status  2 Daemon  3 Sessions  4 Config

 ╭SESSIONS────────────────────────────────────────────────────────────────────╮
 │ no sessions yet — start the daemon and run from Discord                    │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 ╰────────────────────────────────────────────────────────────────────────────╯
 Tab switch  ·  ↑↓ select  ·  Enter open  ·  ? options  ·  q quit
