crates/cli/src/tui/snapshots/ryuzi_cli__tui__render__tests__snapshot_wizard_gateways_phase.snap
---
source: crates/cli/src/tui/render.rs
expression: text
---

 r ryuzi · setup
 ╭CHOOSE GATEWAYS─────────────────────────────────────────────────────────────╮
 │ Space toggles · Enter continues · Esc cancels · pick at least one          │
 │                                                                            │
 │ › [x] Discord — Drive sessions from a Discord server                       │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 ╰────────────────────────────────────────────────────────────────────────────╯
